[tool.poetry]
name = "pypowsybl2grid"
version = "0.1.0"
description = "An integration between Grid2op and PyPowSybl"
authors = ["Geoffroy Jamgotchian <geoffroy.jamgotchian at rte-france.com>"]
readme = "README.md"
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.26.4"
pandas = "^2.2.2"
pandas-stubs = "^2.2.2"
#pypowsybl = "^1.8.0"
pypowsybl = { git = "https://github.com/powsybl/pypowsybl.git", branch = "pandapower_converter" }
#grid2op = "^1.10.4
grid2op = { git = "https://github.com/rte-france/Grid2Op.git", branch = "dev_1.10.4" }

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
